appId: ${APP_ID}
---
- runFlow:
    file: subflows/import/import-database-from-settings.flow.yaml
    env:
      FIXTURE_ROW_ID_MATCH: '34-matching-rules.db'

- runFlow:
    file: subflows/navigation/open-deep-link.flow.yaml
    env:
      DEEP_LINK: budgie://transactions/10/expense

- extendedWaitUntil:
    visible:
      id: 'TransactionInfo.Page'
    timeout: 10000

- extendedWaitUntil:
    visible:
      id: 'MatchingRules.Pill'
    timeout: 10000
- tapOn:
    id: 'MatchingRules.Pill'
- waitForAnimationToEnd

- extendedWaitUntil:
    visible: 'Edit Rule'
- assertVisible: 'Edit Rule'

- tapOn:
    id: 'PageHeader.BackButton'
- waitForAnimationToEnd
- assertVisible:
    id: 'TransactionInfo.Page'

- tapOn:
    id: 'PageHeader.BackButton'

- runFlow:
    file: subflows/navigation/open-deep-link.flow.yaml
    env:
      DEEP_LINK: budgie://transactions/9/expense

- extendedWaitUntil:
    visible:
      id: 'TransactionInfo.Page'
    timeout: 10000

- extendedWaitUntil:
    visible:
      id: 'MatchingRules.Pill'
    timeout: 10000
- tapOn:
    id: 'MatchingRules.Pill'
- waitForAnimationToEnd

- extendedWaitUntil:
    visible:
      id: 'RulesPage.MatchingRulesFilter'
    timeout: 10000
- assertVisible: '2 matching rules'
- assertVisible:
    id: 'RulesPage.RuleCard.0'
- assertVisible:
    id: 'RulesPage.RuleCard.1'

- tapOn:
    id: 'RulesPage.RuleCard.0'
- extendedWaitUntil:
    visible: 'Edit Rule'

- tapOn:
    id: 'PageHeader.BackButton'
- waitForAnimationToEnd
- assertVisible:
    id: 'RulesPage.MatchingRulesFilter'

- tapOn:
    id: 'PageHeader.BackButton'
- assertVisible:
    id: 'TransactionInfo.Page'
